<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="337dp"
        android:layout_height="243dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="33dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProducto">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnRegistrar"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnBuscar"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnEditar"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnEliminar"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMostrarLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnMostrarLista"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtDescripcion"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/txtCodigo"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/txtPrecio"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/btnTomarFoto"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

    <ImageView
        android:id="@+id/ivProducto"
        android:layout_width="122dp"
        android:layout_height="148dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toStartOf="@+id/btnTomarFoto"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio"
        app:srcCompat="@mipmap/ic_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>