<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleArticulos">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="205dp"
        android:layout_height="72dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="106dp"
        android:gravity="center"
        android:text="Detalles del Articulo:"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DetalleCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/txtCodigo"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/DetaleDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/txtDescripcion"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetalleCodigo" />

    <TextView
        android:id="@+id/DetallePrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtPrecio"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetaleDescripcion" />

    <ImageView
        android:id="@+id/ivDetalleImagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="74dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DetallePrecio" />

</androidx.constraintlayout.widget.ConstraintLayout>